# Depth_Teleoperation

./: .gitignore  README.md  pyproject.toml
app/: check_camera.py  check_mediapipe.py  debug_retarget.py  main.py  record.py  replay.py  test_sim_elbow.py  test_sim_minimal.py  tune_filter.py  viz_camera.py  viz_mujoco.py  viz_urdf.py
config/: default.yaml  loose_visibility.yaml  ubp.yaml
core/: aligner.py  filter.py  lower_body.py  retarget.py  safety.py  types.py
models/: ubp.urdf  ubp.xacro  ubp.xml
publisher/: base.py  dynamixel_publisher.py  mock_publisher.py  mujoco_publisher.py  pybullet_publisher.py  udp_publisher.py
scripts/: download_mediapipe_model.ps1  install_hamer.ps1  install_hmr2.ps1  run.ps1  setup_env.ps1
tests/: conftest.py  generate_fixtures.py  test_aligner.py  test_dynamixel_publisher.py  test_e2e_mock.py  test_filter.py  test_lower_body.py  test_mujoco_publisher.py  test_publisher.py  test_pybullet_publisher.py  test_retarget.py  test_retarget_elbow.py  test_safety.py
tests/fixtures/: arm_circle.jsonl  tpose.jsonl
tracker/: base.py  body_backend.py  hamer_hand_backend.py  hand_backend.py  hmr2_body_backend.py  mock_tracker.py  realsense_tracker.py
